Fixed The Alignment Of Footer

--- a/client/src/components/Footer/FooterStyle.css
+++ b/client/src/components/Footer/FooterStyle.css
@@ -5,6 +5,9 @@
     justify-content:center;
     align-items: center;
 }
+img{
+    width: 10%;
+}
 .footer{
     padding: 7px 0;
     background-color: rgb(241, 241, 241);
@@ -13,7 +16,7 @@
     display:flex;
     justify-content:space-around;
     align-items:center;
-    width:75%;
+    width:70%;
 }
 .pageLinks a{
     color: rgb(242, 101, 34);
@@ -21,7 +24,7 @@
     text-decoration:none;
 }
 .socialHandles{
-    width:25%;
+    width:20%;
 }
 .mediaHandles{
     color:rgb(242, 101, 34);
@@ -54,4 +57,13 @@
     .footerLinks{
         margin:10px 2px;
     }
+}
+@media (max-width:920px)
+{
+   img{
+       width:12%!important;
+   }
+   .pageLinks{
+       margin:40px 0;
+   }
 }
